--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.41</version>
+        </dependency>
 
     </dependencies>
     <distributionManagement>
