--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk: oraclejdk8
 before_install:
   - chmod +x mvnw
 script:
-  - "./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V"
-  - "./mvnw pmd:check -DskipTests=true -Dmaven.javadoc.skip=true -B -V"
-  - "./mvnw install -B -V"
+  - "./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -Dgpg.skip -B -V"
+  - "./mvnw pmd:check -DskipTests=true -Dmaven.javadoc.skip=true -Dgpg.skip -B -V"
+  - "./mvnw install -Dgpg.skip -B -V"
 
