--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: java
 jdk: oraclejdk8
+cache:
+  directories:
+    - $HOME/.m2
 before_install:
   - chmod +x mvnw
+install:
+  - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -Dgpg.skip -B -V
 script:
-  - "./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -Dgpg.skip -B -V"
-  - "./mvnw pmd:check -DskipTests=true -Dmaven.javadoc.skip=true -Dgpg.skip -B -V"
-  - "./mvnw install -Dgpg.skip -B -V"
+  - ./mvnw pmd:check -DskipTests=true -Dmaven.javadoc.skip=true -Dgpg.skip -B -V
+  - ./mvnw install -Dgpg.skip -B -V
 
