model implements Serializable

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ target/
 *.iws
 antx.properties
 output/
+.settings/org.eclipse.m2e.core.prefs
+.settings/org.eclipse.core.resources.prefs
+.settings/org.eclipse.jdt.core.prefs
+.settings/org.eclipse.jdt.apt.core.prefs
