--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.alibaba</groupId>
     <artifactId>easyexcel</artifactId>
-    <version>2.0.0-beta6</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
     <name>easyexcel</name>
 
