--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.alibaba</groupId>
     <artifactId>easyexcel</artifactId>
-    <version>2.1.0-beta3</version>
+    <version>2.1.0-beta4</version>
     <packaging>jar</packaging>
     <name>easyexcel</name>
 
@@ -132,11 +132,11 @@
 
     <build>
         <plugins>
-            <!-- 用pmd校验阿里的p3c规范 -->
+            <!-- code style -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.12.0</version>
+                <version>3.8</version>
                 <configuration>
                     <printFailingErrors>true</printFailingErrors>
                     <verbose>true</verbose>
@@ -157,7 +157,6 @@
                     </excludes>
                 </configuration>
                 <executions>
-                    <!-- 绑定pmd:check到verify生命周期 -->
                     <execution>
                         <id>pmd-check-verify</id>
                         <phase>validate</phase>
@@ -170,7 +169,7 @@
                     <dependency>
                         <groupId>com.alibaba.p3c</groupId>
                         <artifactId>p3c-pmd</artifactId>
-                        <version>2.0.0</version>
+                        <version>1.3.6</version>
                     </dependency>
                 </dependencies>
             </plugin>
