跳转代码逻辑

--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,8 @@
                         <exclude>com/alibaba/excel/event/AnalysisEventListener.java</exclude>
                         <exclude>com/alibaba/excel/metadata/DataFormatter.java</exclude>
                         <exclude>com/alibaba/excel/util/DateUtils.java</exclude>
+                        <exclude>com/alibaba/excel/metadata/format/DataFormatter.java</exclude>
+                        <exclude>com/alibaba/excel/metadata/format/ExcelGeneralNumberFormat.java</exclude>
                     </excludes>
                 </configuration>
                 <executions>
