try make some improvement on issue 1579
try make some improvement on issue 1579

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <version>3.17</version>
         </dependency>
         <dependency>
+        <groupId>cn.hutool</groupId>
+        <artifactId>hutool-all</artifactId>
+        <version>4.5.15</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>3.17</version>
@@ -106,6 +111,13 @@
             <version>1.18.8</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.vdurmont</groupId>
+            <artifactId>emoji-java</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
