--- a/pom.xml
+++ b/pom.xml
@@ -60,17 +60,17 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
-            <version>3.17</version>
+            <version>5.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>3.17</version>
+            <version>5.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml-schemas</artifactId>
-            <version>3.17</version>
+            <artifactId>poi-ooxml-full</artifactId>
+            <version>5.0.0</version>
         </dependency>
         <dependency>
             <groupId>cglib</groupId>
