--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,18 @@
-# This workflow will build a Java project with Ant
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-ant
+#
+#    Copyright 2009-2021 the original author or authors.
+#
+#    Licensed under the Apache License, Version 2.0 (the "License");
+#    you may not use this file except in compliance with the License.
+#    You may obtain a copy of the License at
+#
+#       http://www.apache.org/licenses/LICENSE-2.0
+#
+#    Unless required by applicable law or agreed to in writing, software
+#    distributed under the License is distributed on an "AS IS" BASIS,
+#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+#    See the License for the specific language governing permissions and
+#    limitations under the License.
+#
 
 name: Java CI
 
@@ -16,6 +29,10 @@ jobs:
         with:
           java-version: '8'
           distribution: 'adopt'
+      - name: Cache Maven
+          uses: actions/cache@v2.1.6
+          with:
+            path: ~/.m2
       - name: CI
         run: ./mvnw install -B -V -Dmaven.test.skip=true
       - name: Java Doc
