--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,7 @@
                         <exclude>com/alibaba/excel/metadata/format/DataFormatter.java</exclude>
                         <exclude>com/alibaba/excel/metadata/format/ExcelGeneralNumberFormat.java</exclude>
                         <exclude>com/alibaba/excel/metadata/csv/CsvDataFormat.java</exclude>
+                        <exclude>com/alibaba/excel/write/executor/ExcelWriteFillExecutor.java</exclude>
                     </excludes>
                 </configuration>
                 <executions>
