修改目录结构

--- a/easyexcel-core/pom.xml
+++ b/easyexcel-core/pom.xml
@@ -16,6 +16,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel-support</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
         </dependency>
